Código corregido y funciona totalmente con base de datos conectada

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=ApiNose
+spring.datasource.url=jdbc:postgresql://localhost:5433/apinosebd
+spring.datasource.username=postgres
+spring.datasource.password=1409ojit
+spring.datasource.driver-class-name=org.postgresql.Driver
